# havoc

./: .gitignore  README.md  cfg.format.json  pyproject.toml
experiments/: DatasetRegistry.py  ExperimentV1.py  ExperimentV2.py  ExperimentV3.py  ExperimentV4.py  ExperimentV5.py  ModelRegistry.py
havoc/experiment/: Ev1.py  Ev10.py  Ev11.py  Ev12.py  Ev13.py  Ev14.py  Ev15.py  Ev2.py  Ev3.py  Ev4.py  Ev5.py  Ev6.py  Ev7.py  Ev8.py  Ev9.py
havoc/registry/: datasetRegistry.py  modelRegistry.py
havoc/utils/: cfg.py  data.py  env.py  logger.py
logs/: Ev1.txt  Ev2.txt  Ev3.txt  ExperimentV5_0.0003_64_50.txt
notebooks/: ee506l-ocr-showdown.ipynb
